package org.example.network.data;

/**
 * Перечисление стран, представляющее национальность человека.
 */
public enum Country {
    /** Франция. */
    FRANCE,
    /** Индия. */
    INDIA,
    /** Северная Корея. */
    NORTH_KOREA
}